# OLED_real

./: 2PPlAn_33PYMPM  CMakeLists.txt  example.py  example10.py  example11.py  example12.py  example13.py  example14.py  example15.py  example16.py  example17.py  example18.py  example19.py  example2.py  example20.py  example21.py  example22.py  example3.py  example4.py  example5.py  example6.py  example7.py  example8.py  example9.py  gui.ui  main.py  tab1.py
Qtcontrollers/: axes_properties.py  elements_structure.py  elements_structure_graph.py  emission_layer.py  emission_layer_graph.py  emission_zone_setting.py  execute.py  logo_image.py  plotting_param.py  project_info.py
Qtcontrollers/drawing/: emission_zone_setting.py
Qtcontrollers/resources/: text_em.csv  text_emz.txt  text_p.csv
c/: CIE.c  EMZ_load.c  Makefile  OLED_main.c  RI_load.c  Reflec.c  TMM_anisotropy_coeff.c  hannah.c  innerfunc.c  intp.c  multiply.c  output.c  program.c  spectrum_load.c  struct.h
c/output/: #1-1\output_mode.txt
controllers/: CIE.py  axes_properties.py  elements_structure.py  elements_structure_graph.py  logo_image.py  main.py  plotting_param.py  polar.py
controllers/drawing/: Polar.py
controllers/resources/: fakedata.csv  hannimpeha.csv  (+1 more)
pythons2/: color.py  effqe.py  emsp2d.py  emsp2dline.py  emsp3d.py  light2d.py  light3d.py  modeAnalysis3D.py  modeAnalysisLine.py  modeAnalysisOptical.py  pd2d.py  polar.py  purcell.py
resources/: plotting_option.csv  text.csv  text_em.csv
spectrum/: DCJTB0.5.txt  DTPDDA_mCP.txt  DTPDDA_mCP2.txt  Irdmppy_ph2tmd.PL  TTAZ.txt  TXAZ.txt
(+246 files in other folders)
